--- a/config.json
+++ b/config.json
@@ -1,28 +1,28 @@
 {
-    "ownerNumber": "6283834558105@s.whatsapp.net", 
-    "ownerName": "Lexxy Official", 
-    "botName": "NEOBOT-STORE",
-    "footer": "© BOTMD | 2022", 
+    "ownerNumber": "6285791220179@s.whatsapp.net", 
+    "ownerName": "Ramaa BotZz", 
+    "botName": "MaaBotz",
+    "footer": "© MaaBotz | 2022", 
     "sessionName": "session", 
     "pathimg": "./media/logo.jpg", 
     "pathqris": "./media/qris.jpg",
-    "group": "https://chat.whatsapp.com/DHf4mb8QnmC5zynElmG2tG",
-    "yootube": "https://youtube.com/channel/UCLd-bhT8Dqq9PjGc6bWUVyg",
+    "group": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
+    "yootube": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
      
     "QrisAllPay": "https://telegra.ph/file/d015def9028eb1c0a156b.jpg",
-    "textBarisDonate1": "Dana : 0857-8900-4732",
-    "textBarisDonate2": "Ovo : 0857-8900-4732",
-    "textBarisDonate3": "Gopay : 08xxxxxxxxx",
-    "textBarisDonate4": "Pulsa : 0857-8900-4732",
+    "textBarisDonate1": "Dana : 0858-0624-0904",
+    "textBarisDonate2": "Ovo : ---",
+    "textBarisDonate3": "Gopay : -----",
+    "textBarisDonate4": "Pulsa : 0858-0624-0904",
   
     "ButtonTextMenu1": "Youtube",
     "ButtonTextMenu2": "Rest Api",
     "quickReplyButton3": "Rules",
     "quickReplyButton4": "Donasi",
-    "quickReplyButton5": "Dashboard",
+    "quickReplyButton5": "dashboard",
   
-    "ButtonMenuLink1": "https://youtube.com/channel/UCLd-bhT8Dqq9PjGc6bWUVyg",
-    "ButtonMenuLink2": "https://api-lexxy-official.herokuapp.com",
+    "ButtonMenuLink1": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
+    "ButtonMenuLink2": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
     "displayTextMenu3": "rules",
     "displayTextMenu4": "donasi",
     "displayTextMenu5": "dashboard",
@@ -30,7 +30,7 @@
     "limitGame": 35,
     "gamewaktu": 90,
     "sticker": {
-        "packname": "© Store",
-        "author": "Lexxy Official"
+        "packname": "© MaaBotz",
+        "author": "Ramaaaaaaaaaaa Gnz"
     }
 }
