--- a/config.json
+++ b/config.json
@@ -9,10 +9,10 @@
     "group": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
     "yootube": "https://youtube.com/channel/UCD0S2id8d7gbQHDKIpxlPDA",
      
-    "QrisAllPay": "https://telegra.ph/file/d015def9028eb1c0a156b.jpg",
+    "QrisAllPay": "https://telegra.ph/file/a6fcb254bc126617cc21e.jpg",
     "textBarisDonate1": "Dana : 0858-0624-0904",
-    "textBarisDonate2": "Ovo : ---",
-    "textBarisDonate3": "Gopay : -----",
+    "textBarisDonate2": "Ovo : https://telegra.ph/file/a6fcb254bc126617cc21e.jpg",
+    "textBarisDonate3": "Gopay : https://telegra.ph/file/a6fcb254bc126617cc21e.jpg",
     "textBarisDonate4": "Pulsa : 0858-0624-0904",
   
     "ButtonTextMenu1": "Youtube",
